fix(intro): good results

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -64,7 +64,7 @@ assíncrono (\textit{streams}) e \textit{caching}.
 O uso de \textit{Node.JS} e \textit{React.JS}, duas tecnologias em crescente uso e relevância no
 desenvolvimento \textit{web}, justifica-se pelo fato de que estas permitem uma abordagem de alta
 performance e apresentam recursos para otimização e escalabilidade. O \textit{Node.JS}, em específico, apresenta
-um ótimo desempenho em casos que necessitem da persistência de centenas ou milhares de conexões
+bons resultados em casos que necessitem da persistência de centenas ou milhares de conexões
 simultâneas, onde a comunicação é realizada com o envio de pequenos fragmentos do arquivo de destino
 \cite[p. 112]{EJSMONT}. Quanto à camada \textit{front-end}, a biblioteca \textit{React.JS} traz como
 carro chefe o gerenciamento de estado da aplicação, orientado a dados que podem mudar com o passar do tempo.
