Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -23,3 +23,11 @@ publisher={O'Reilly},
 year={2020},
 volume={2 ed.}
 }
+
+@Book{DIOGORESENDE,
+author={Diogo Resende},
+title={Node.js High Performance},
+publisher={Packt Publishing Ltd},
+year={2015},
+volume={1 ed.}
+}
