Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -31,3 +31,11 @@ publisher={Packt Publishing Ltd},
 year={2015},
 volume={1 ed.}
 }
+
+@Book{RSL,
+author={B. Kitchenham and S. Charters},
+title={Guidelines for performing systematic literature reviews in software engineering},
+publisher={EBSE Technical Report},
+year={2007},
+volume={Ver. 2.3}
+}
