--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -74,14 +74,6 @@ assíncrono (\textit{streams}) e \textit{caching}. Faz-se necessário, portanto,
 técnicas escolhidas para aumentar o desempenho em alta demanda de dados utilizando os \textit{frameworks} 
 escolhidos.
 
-% Caching is one of the most important techniques when it comes to scaling the
-% front end of your web application. Instead of trying to add more servers or make
-% them respond faster to clients’ requests, use caching to avoid having to serve
-% these requests in the first place. In fact, caching is so critical to the scalability of
-% web applications that Chapter 6 is dedicated to it. To avoid repeating parts of that
-% deeper dive, let’s just highlight a few components relevant to the front-end layer
-% of your application here. (p 133 livro);
-
 
 % À medida que a computação como um todo evoluiu, desde a comunicação
 % utilizando apenas bits, para a comunicação com dados mais complexos e robustos,
@@ -167,8 +159,18 @@ simplificada, ao modo que esta operação se resume ao encadeamento de fluxos co
 
 \subsection{\textit{Cache}}
 
+% Caching is one of the most important techniques when it comes to scaling the
+% front end of your web application. Instead of trying to add more servers or make
+% them respond faster to clients’ requests, use caching to avoid having to serve
+% these requests in the first place. In fact, caching is so critical to the scalability of
+% web applications that Chapter 6 is dedicated to it. To avoid repeating parts of that
+% deeper dive, let’s just highlight a few components relevant to the front-end layer
+% of your application here. (p 133 livro);
+
 
 \section{Metodologia}
+
+\subsection{Revisão sistemática da literatura}
 
 % 1. Revisão bibliográfica de documentação e artigos referentes à
 % linguagem e frameworks escolhidos para o tratamento de alta
@@ -180,11 +182,10 @@ simplificada, ao modo que esta operação se resume ao encadeamento de fluxos co
 % 4. Desenvolvimento de aplicações cliente e servidor para transferência de
 % alto volume de dados.
 
+\section{Resultados e discussão}
 
-\section{Análises preliminares}
 
-
-\section{Considerações finais}
+\section{Conclusão}
 
 
 \section{Referências}
@@ -192,10 +193,3 @@ simplificada, ao modo que esta operação se resume ao encadeamento de fluxos co
 \bibliography{referencias}
 
 \end{document}
-
-% Resumo
-% Introdução (Contexto do tema, problemática, justificativa e objetivos do estudo)
-% Revisão da bibliografia e trabalhos relacionados
-% Metodologia (Materiais e/ ou métodos utilizados)
-% Análises preliminares
-% Considerações finais (sobre o que já foi apresentado até o momento da entrega desta versão)
