feat(background): eda

--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -39,3 +39,41 @@ publisher={EBSE Technical Report},
 year={2007},
 volume={Ver. 2.3}
 }
+
+@Article{JGD,
+author={J. Davis and G. Kildow and D. Lee},
+title={The Case of the Poisoned Event Handler: Weaknesses in the Node.js Event-Driven Architecture},
+year={2017},
+pages={1-6},
+journal={EuroSec'17: Proceedings of the 10th European Workshop on Systems Security}
+}
+
+@Article{MFO,
+author={M. Madsen and F. Tip and O. Lhoták},
+title={Static analysis of event-driven Node.js JavaScript applications},
+year={2015},
+volume={50},
+journal={ACM SIGPLAN Notices}
+}
+
+@Article{BUGS,
+author={J. Wang and W. Dou and Y. Gao and C. Gao and F. Qin, K. Yin and J. Wei},
+title={A comprehensive study on real world concurrency bugs in Node.js},
+year={2017},
+publisher={IEEE},
+journal={IEEE/ACM International Conference on Automated Software Engineering (ASE)}
+}
+
+@misc{NODEEVENTLOOP,
+author={{Node.js Org}},
+title={The Node.js Event Loop, Timers, and process.nextTick()},
+howpublished={\url{https://nodejs.org/en/docs/guides/event-loop-timers-and-nexttick}},
+note={Acessado em: 04 de junho de 2023}
+}
+
+@misc{NODEBLOCKEVENTLOOP,
+author={{Node.js Org}},
+title={Don't Block the Event Loop (or the Worker Pool)},
+howpublished={\url{https://nodejs.org/pt-br/docs/guides/dont-block-the-event-loop}},
+note={Acessado em: 04 de junho de 2023}
+}
