--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -32,6 +32,14 @@ year={2015},
 volume={1 ed.}
 }
 
+@Book{MARIO,
+author={Mario Casciaro},
+title={Node.js Design Patterns},
+publisher={Packt Publishing Ltd},
+year={2014},
+volume={1 ed.}
+}
+
 @Book{RSL,
 author={B. Kitchenham and S. Charters},
 title={Guidelines for performing systematic literature reviews in software engineering},
@@ -64,6 +72,14 @@ publisher={IEEE},
 journal={IEEE/ACM International Conference on Automated Software Engineering (ASE)}
 }
 
+@Article{ZRHR,
+author={Y. Zhu and D. J. Richins and M. Halpern and V. J. Reddi},
+title={Microarchitectural implications of event-driven server-side web applications},
+year={2015},
+publisher={Association for Computing Machinery},
+journal={MICRO-48: Proceedings of the 48th International Symposium on Microarchitecture}
+}
+
 @misc{NODEEVENTLOOP,
 author={{Node.js Org}},
 title={The Node.js Event Loop, Timers, and process.nextTick()},
@@ -76,4 +92,11 @@ author={{Node.js Org}},
 title={Don't Block the Event Loop (or the Worker Pool)},
 howpublished={\url{https://nodejs.org/pt-br/docs/guides/dont-block-the-event-loop}},
 note={Acessado em: 04 de junho de 2023}
+}
+
+@misc{NODEV8,
+author={{Node.js Dev}},
+title={The V8 JavaScript Engine},
+howpublished={\url{https://nodejs.dev/en/learn/the-v8-javascript-engine/}},
+note={Acessado em: 05 de junho de 2023}
 }
