--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -64,8 +64,8 @@ Ao incluir estado em uma aplicação utilizando \textit{React.JS}, inclui-se a p
 e modificar dados dinâmicos enviados pelo servidor, que modificam a árvore de componentes e acarretam 
 mudanças na interface em que o usuário interage \cite[p. 97]{BANKSEPORCELLO}.
 
-Aplicações como \textit{streaming} de vídeo (ADICIONAR OUTROS EXEMPLOS) devem processar arquivos de 
-grande porte, de forma rápida e estável. Contudo, existem limitações inerentes ao uso da 
+Aplicações como colaboração de documentos e tarefas, jogos e \textit{streaming} de vídeo \cite{ZRHR} devem processar 
+arquivos de grande porte, de forma rápida e estável. Contudo, existem limitações inerentes ao uso da 
 plataforma \textit{web}, como o processamento de diversas requisições que exijam muitos dados, 
 tratamento do alto fluxo de dados pela máquina cliente e os limites impostos pelas tecnologias escolhidas.
 
@@ -76,25 +76,6 @@ técnicas escolhidas para aumentar o desempenho em alta demanda de dados utiliza
 escolhidos.
 
 
-% À medida que a computação como um todo evoluiu, desde a comunicação
-% utilizando apenas bits, para a comunicação com dados mais complexos e robustos,
-% a criação e implementação de novas técnicas que adaptem a manipulação de novas
-% formas de dados mantendo performance, simplicidade e robustez, torna-se um
-% desafio.
-
-% Todo projeto de software precisa de estimativas e planejamento, mas quando
-% tem-se um sistema desenvolvido para a web, principalmente onde exista grandes
-% volumes de dados, o termo escalabilidade deve se tornar muito mais presente na
-% concepção do projeto.
-
-% O termo escalabilidade pode ser definido como a maneira de ajustar a
-% capacidade de um sistema para atender demandas, de forma que o custo desta
-% operação não seja tão elevado. \cite[p. 3]{EJSMONT}. A incorporação de
-% escalabilidade em um sistema pode compreender a capacidade de lidar com um
-% crescimento de usuários, solicitações e transações, para este projeto, seu uso será
-% voltado para a requisição e transferência de grandes volumes de dados.
-
-
 \section{Revisão de bibliografia e trabalhos relacionados}
 
 \subsection{Padrões de projeto no Node.JS}
@@ -103,14 +84,14 @@ Padrões de projeto são soluções previamente definidas para problemas especí
 são comuns ao desenvolvimento do \textit{software} de diversas aplicações. Não são, necessariamente, 
 bibliotecas ou módulos prontos, apenas carregam o conceito de uma solução já comprovada e testada para um 
 determinado caso, sendo, dessa forma, necessária a implementação destes na 
-linguagem escolhida. \cite[p. 13]{DIOGORESENDE}
+linguagem escolhida \cite[p. 13]{DIOGORESENDE}.
 
 Um único \textit{software} pode ser implementado com diferentes padrões de projeto e, até mesmo, com a união
 de dois ou mais. Os padrões apresentam diversos benefícios, como aumento da produtividade, manutenção e comunicação
 entre a equipe de desenvolvimento. Contudo, a definição das soluções arquiteturais adotadas deve ser 
 cuidadosa, visto que escolhas incorretas podem acarretar em novos empecilhos. Dentre outras, 
 alguns \textit{designs} adicionam camadas extras de processamento para obter maior flexibilidade, podendo, dessa forma, 
-afetar as métricas de desempenho do sistema final. \cite[p. 13 - p. 14]{DIOGORESENDE}
+afetar as métricas de desempenho do sistema final \cite[p. 13 - p. 14]{DIOGORESENDE}.
 
 Dentre a maioria dos padrões de projeto conhecidos, existem aqueles que são amplamente utilizados no 
 \textit{Node.JS}, devido à sua estrutura e ao seu modelo de interface. Dentre eles, evidenciam-se
@@ -120,7 +101,7 @@ uma simples função somada à uma \textit{callback}, que irá consumir mais rec
 leitura onde é possível verificar os eventos de dados e de conclusão, ou até mesmo encaminhar o fluxo para 
 outra camada de processamento. Da mesma forma que ocorre com os arquivos, o controle dos eventos 
 de conexão, recebimento de dados e encerramento está presente em módulos principais como, por exemplo, 
-o \textit{http}. Em suma, eventos são recursos fundamentais do \textit{Node.JS}. \cite[p. 15]{DIOGORESENDE}
+o \textit{http}. Em suma, eventos são recursos fundamentais do \textit{Node.JS} \cite[p. 15]{DIOGORESENDE}.
 
 
 \subsection{Arquitetura orientada a eventos}
@@ -128,7 +109,7 @@ o \textit{http}. Em suma, eventos são recursos fundamentais do \textit{Node.JS}
 A arquitetura orientada a eventos (\textit{Event-Driven Architecture}, EDA) baseia-se na ideia de produção e consumo 
 de eventos, sendo que o consumo pode ser feito por um ou mais ouvintes ao mesmo tempo. A implementação da parte consumidora 
 deve garantir que haja uma reação ao acontecimento de eventos, ao invés de simplesmente tentar detectar 
-mudanças nos dados recebidos. \cite[p. 27]{DIOGORESENDE} 
+mudanças nos dados recebidos \cite[p. 27]{DIOGORESENDE}.
 
 Operações envolvendo \textit{sockets}, \textit{streams} e arquivos são, em grande parte, 
 realizados de forma assíncrona em aplicações escritas na plataforma do \textit{Node.JS}, da forma que o processamento
@@ -136,7 +117,7 @@ dos ouvintes é executado diante de algum disparo de evento. \cite{MFO} Ao adota
 a aplicação passa a ter o fluxo de informação controlado pelos disparos, o que, dependendo do caso, pode ser a melhor 
 escolha de padrão. Contudo, ainda é preciso se atentar a alguns detalhes e desvantagens ao utilizar esta abordagem,
 visto que diversos erros de programação podem ser observados como, por exemplo, eventos não tratados e ouvintes
-registrados tarde demais. \cite[p. 28]{DIOGORESENDE}
+registrados tarde demais \cite[p. 28]{DIOGORESENDE}.
 
 Como o fluxo de dados da aplicação passa a ser dependente do acontecimento de certos eventos, é preciso ter cuidado 
 extra no código para não permitir brechas que podem levar a um \textit{deadlock},
@@ -145,12 +126,12 @@ em outras palavras, uma trava que impossibilita o prosseguimento do fluxo imagin
 consumidor não é acionado, fazendo com que este fique preso em um ponto exato, não podendo avançar nem regredir.
 A segunda questão a ser observada, que também vale para outros tipos de padrões, é o tratamento de erros consistente
 e robusto. Ao passo que o ponto anterior pode não ser fatal para a aplicação como um todo, ignorar erros, principalmente
-os lançados por módulos principais, acarretará em paradas fatais da aplicação. \cite[p. 28]{DIOGORESENDE}
+os lançados por módulos principais, acarretará em paradas fatais da aplicação \cite[p. 28]{DIOGORESENDE}.
 
 O modelo orientado a eventos implementado na plataforma do \textit{Node.JS} é composto por duas partes: 
 \textit{loop thread} e \textit{worker pool} (também conhecida como \textit{threadpool}). A primeira, em específico, 
 diz respeito à uma única \textit{thread} responsável por executar o código fornecido pelo usuário, além 
-das próprias \textit{callbacks} definidas para as respostas dos disparos de eventos. Como o todo o código principal 
+das próprias \textit{callbacks} definidas para as respostas dos disparos de eventos. Como todo o código principal 
 é executado em uma única \textit{thread}, o \textit{Node.JS} transfere certas operações mais custosas à \textit{worker pool}, 
 com o objetivo de não travar a \textit{thread} principal responsável por receber novas solicitações de clientes \cite{BUGS}, 
 como, por exemplo, operações de I/O para as quais sistemas operacionais não oferecem uma versão não-bloqueante 
@@ -159,7 +140,7 @@ como, por exemplo, operações de I/O para as quais sistemas operacionais não o
 \begin{figure}[h]
 \centering
 \caption{Modelo da abordagem EDA no \textit{Node.JS}}
-\includegraphics[width=0.8\textwidth]{images/eda-arch-nodejs.png}
+\includegraphics[width=0.8\textwidth]{images/pt-br/eda-arch-nodejs.png}
 \label{fig:nodejs_eda_model}
 
 Fonte: Adaptado de \cite{BUGS}.
@@ -177,7 +158,7 @@ assíncronas de I/O e, ao término, os eventos serão inseridos na fila específ
 possui sete filas de eventos para diferentes tipos, sendo eles: temporizador, I/O, pendente, ocioso, preparação, 
 verificação e fechamento \cite{NODEEVENTLOOP}). Na figura, as etapas 2.1 e 2.2 representam este comportamento.
 Por fim, a \textit{loop thread} busca estes novos eventos na fila e executa suas 
-\textit{callbacks} (etapas 3.1 e 3.2).\cite{BUGS}
+\textit{callbacks} (etapas 3.1 e 3.2) \cite{BUGS}.
 
 
 \subsection{EDA \textit{vs.} OPTC}
@@ -188,38 +169,98 @@ A arquitetura de \textit{multithreading}, abordagem tradicional de aplicações 
 no conceito de uma \textit{thread} por cliente (\textit{One Thread Per Client}, OTPC), ou seja, cada requisição
 recebida pelo servidor é atribuida à uma nova \textit{thread} para processamento isolado dos clientes, reduzindo
 problemas relacionados à interferências. Contudo, cada requisição recebida resulta em sobrecarga no uso de
-recursos de máquina e em trocas de contexto. \cite{JGD}
+recursos de máquina e em trocas de contexto \cite{JGD}. Dessa forma, os custos computacionais aumentam
+à medida que novos clientes realizam suas requisições, fazendo com que os sitemas limitem o número máximo de
+\textit{threads} e, consequentemente, travem a escalabilidade do servidor \cite{ZRHR}.
 
 
 \subsection{\textit{Stream}}
 
+As \textit{streams} representam uma das mais importantes estruturas na plataforma do \textit{Node.JS}, por motivos
+como aumento em desempenho e eficiência, possibilidade de criação de códigos elegantes e pela sua compatibilidade
+no modelo da arquitetura orientada a eventos do \textit{Node.JS} \cite[p. 119]{MARIO}. Oferecem uma interface facilitada 
+e rápida para leitura, gravação e transformação, da forma que é possível encadear dados entre estas operações 
+para processá-los e, se necessário, transformá-los. Além dessas, essa estrutura está relacionada com os eventos, visto que
+utilizam destes para enviar notificações aos consumidores quando os dados estão prontos para consumo ou quando o
+processamento chegou ao fim \cite[p. 28]{DIOGORESENDE}.
+
+O modelo da arquitetura baseada em eventos do \textit{Node.JS} aumenta o poder das \textit{streams}, visto que,
+em plataformas baseadas em eventos, a maneira mais eficiente para tratamento de I/O é com processamento em tempo real.
+Dessa forma, a aplicação irá consumir os dados de entrada a medida que estes estão disponíveis, e o envio dos dados
+de saída será de acordo com o rítimo de produção da aplicação \cite[p. 119]{MARIO}.
+
+As \textit{streams}, além desta, são utilizadas em problemas que não apresentam soluções tecnicamente
+possíveis com outras interfaces presentes na plataforma do \textit{Node.JS}, como, por exemplo, a leitura de 
+arquivos suficientemente grandes com funções que retornam um \textit{buffer} ao término da leitura completa. Arquivos com 
+centenas de \textit{megabytes} ou até mesmo \textit{gigabytes}, precisariam ser carregados em um único 
+\textit{buffer}, o que torna esse cenário inviável, visto que a aplicação ficaria sem memória, ainda mais ao 
+imaginarmos cenários de aplicações  \textit{web} onde seria necessário realizar diversas leituras simultâneas.
+Além destas, o V8 (mecanismo presente no \textit{Node.JS} responsável pela execução de códigos \textit{JavaScript} \cite{NODEV8}) impõe 
+um limite máximo de, aproximadamente, 1 GB para \textit{buffers}, o que explica a impossibilidade técnica para problemas 
+desta natureza \cite[p. 122]{MARIO}.
 
 \subsection{\textit{Buffer}}
 
 Os \textit{buffers}, no \textit{Node.JS}, são objetos especiais utilizados para armazenamento e processamento 
-de dados binários, o que não seria possível operando com tipos primitivos do \textit{JavaScript} como \textit{strings},
-por exemplo, visto que estas são codificadas em \textit{Unicode}. \cite[p. 29]{DIOGORESENDE}
+de dados binários, o que não seria possível operando com tipos primitivos do \textit{JavaScript} como, por exemplo,
+\textit{strings}, visto que estas são codificadas em \textit{Unicode} \cite[p. 29]{DIOGORESENDE}.
 
 Além da possibilidade de manipulação de dados binários e da facilidade em leituras e escritas de números de diferentes 
 tamanhos, os \textit{buffers} são uma importante estrutura na plataforma do \textit{Node.JS} em relação à arquitetura
 orientada a eventos, dada a compatibilidade binária existente entre os principais módulos da plataforma que 
 utilizam estes nos eventos de dados. Dessa forma, é possível que arquivos sejam transmitidos ao cliente de maneira 
-simplificada, ao modo que esta operação se resume ao encadeamento de fluxos com a troca de 
-\textit{buffers} entre cliente e servidor. \cite[p. 29]{DIOGORESENDE}
-
-
-\subsection{\textit{Cache}}
-
-% Caching is one of the most important techniques when it comes to scaling the
-% front end of your web application. Instead of trying to add more servers or make
-% them respond faster to clients’ requests, use caching to avoid having to serve
-% these requests in the first place. In fact, caching is so critical to the scalability of
-% web applications that Chapter 6 is dedicated to it. To avoid repeating parts of that
-% deeper dive, let’s just highlight a few components relevant to the front-end layer
-% of your application here. (p 133 livro);
+simplificada, ao modo que esta operação se resume ao encadeamento de \textit{streams} com a troca de 
+\textit{buffers} entre cliente e servidor \cite[p. 29]{DIOGORESENDE}.
 
 
 \section{Metodologia}
+
+A pesquisa a ser desenvolvida tem caráter semi-experimental, qualitativo e com escopo exploratório.
+
+% Nesta seção, descreveremos a metodologia proposta para realizar o estudo relativo ao desempenho em função do consumo sobre 
+% alta demanda de dados em sistemas web desenvolvidos com Node.JS. O objetivo desta pesquisa é investigar o impacto do consumo 
+% de recursos no desempenho de sistemas web baseados em Node.JS quando confrontados com uma demanda intensa de dados.
+
+% 4.1. Planejamento Experimental
+
+% O estudo será realizado em um ambiente controlado, onde serão desenvolvidos cenários de teste representativos de diferentes 
+% níveis de consumo de dados. Serão definidos parâmetros, como o número de requisições simultâneas, tamanhos de dados e cargas 
+% de trabalho, para simular situações de baixa, média e alta demanda de dados.
+
+% 4.2. Construção do Ambiente de Teste
+
+% Será configurado um ambiente de teste composto por um servidor de aplicação, um banco de dados e um conjunto de máquinas cliente. 
+% O servidor de aplicação será baseado em Node.JS, utilizando a versão 12.18.3 juntamente com o framework Express.js versão 4.17.1. 
+% O banco de dados escolhido será o MongoDB versão 4.4.2, devido à sua compatibilidade e integração bem estabelecida com o Node.JS.
+
+% 4.3. Definição dos Cenários de Teste
+
+% Serão definidos três cenários de teste para avaliar o desempenho do sistema em diferentes níveis de consumo de dados. Cada cenário 
+% representará uma carga de trabalho específica, com diferentes quantidades de requisições simultâneas e tamanhos de dados a serem 
+% processados. Os cenários de teste serão nomeados da seguinte forma:
+
+% Cenário 1: Baixa demanda de dados - 100 requisições simultâneas com uma carga de dados pequena (100KB).
+% Cenário 2: Média demanda de dados - 500 requisições simultâneas com uma carga de dados moderada (1MB).
+% Cenário 3: Alta demanda de dados - 1000 requisições simultâneas com uma carga de dados grande (10MB).
+% 4.4. Coleta de Dados
+
+% Serão definidos indicadores de desempenho a serem coletados durante a execução dos cenários de teste. Os principais indicadores 
+% incluirão o tempo de resposta das requisições, a taxa de transferência, a utilização de CPU e memória, e a latência do banco de dados. 
+% Serão utilizadas ferramentas de coleta de dados adequadas, como o Apache JMeter e o MongoDB Profiler, para garantir a precisão 
+% e consistência dos resultados.
+
+% 4.5. Análise de Dados
+
+% Os dados coletados serão analisados estatisticamente para identificar padrões, tendências e relações entre o consumo de dados e 
+% o desempenho do sistema. Serão utilizadas técnicas de análise descritiva e inferencial para interpretar os resultados e obter 
+% insights significativos. Serão realizadas comparações entre os cenários de teste para identificar diferenças significativas 
+% em termos de desempenho.
+
+% 4.6. Considerações Éticas
+
+% Serão adotadas medidas para garantir a ética na condução da pesquisa. Será assegurada a anonimização dos dados coletados e 
+% a conformidade com as diretrizes de ética em pesquisa. Além disso, serão respeitadas as normas de privacidade e proteção 
+% de dados, e o ambiente de teste será isolado para evitar qualquer impacto negativo em sistemas em produção.
 
 \subsection{Revisão sistemática da literatura}
 
