--- a/article/referencias.bib
+++ b/article/referencias.bib
@@ -64,6 +64,14 @@ volume={50},
 journal={ACM SIGPLAN Notices}
 }
 
+@Article{ATOMICITY,
+author={X. Chang and W. Dou and Y. Gao and J. Wang and J. Wei and T. Huang},
+title={Detecting Atomicity Violations for Event-Driven Node.js Applications},
+year={2019},
+publisher={IEEE},
+journal={2019 IEEE/ACM 41st International Conference on Software Engineering (ICSE)}
+}
+
 @Article{BUGS,
 author={J. Wang and W. Dou and Y. Gao and C. Gao and F. Qin, K. Yin and J. Wei},
 title={A comprehensive study on real world concurrency bugs in Node.js},
