Co-authored-by: Renato Ruppel <HERuppel@users.noreply.github.com>

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -216,23 +216,22 @@ simplificada, ao modo que esta operação se resume ao encadeamento de \textit{s
 
 \section{Metodologia}
 
-A pesquisa a ser desenvolvida tem caráter semi-experimental, qualitativo e com escopo exploratório.
 
-% Nesta seção, descreveremos a metodologia proposta para realizar o estudo relativo ao desempenho em função do consumo sobre 
-% alta demanda de dados em sistemas web desenvolvidos com Node.JS. O objetivo desta pesquisa é investigar o impacto do consumo 
-% de recursos no desempenho de sistemas web baseados em Node.JS quando confrontados com uma demanda intensa de dados.
+Nesta seção será descrita a metodologia proposta para a pesquisa do tema, esta que tem caráter semi-experimental, qualitativo
+e escopo exploratório. Sendo o objetivo desta pesquisa investigar o impacto do consumo de recursos no desempenho de sistemas
+web baseados em Node.JS quando confrontados com uma demanda intensa de dados.
 
-% 4.1. Planejamento Experimental
+4.?. Planejamento Experimental
 
-% O estudo será realizado em um ambiente controlado, onde serão desenvolvidos cenários de teste representativos de diferentes 
-% níveis de consumo de dados. Serão definidos parâmetros, como o número de requisições simultâneas, tamanhos de dados e cargas 
-% de trabalho, para simular situações de baixa, média e alta demanda de dados.
+O estudo será realizado em um ambiente controlado, onde serão desenvolvidos cenários de teste representativos de diferentes 
+níveis de consumo de dados. Serão definidos parâmetros, como tamanhos de dados a serem transferidos e cargas 
+de trabalho, para simular situações de baixa, média e alta demanda de dados.
 
-% 4.2. Construção do Ambiente de Teste
+4.?. Construção do Ambiente de Teste
 
-% Será configurado um ambiente de teste composto por um servidor de aplicação, um banco de dados e um conjunto de máquinas cliente. 
-% O servidor de aplicação será baseado em Node.JS, utilizando a versão 12.18.3 juntamente com o framework Express.js versão 4.17.1. 
-% O banco de dados escolhido será o MongoDB versão 4.4.2, devido à sua compatibilidade e integração bem estabelecida com o Node.JS.
+Será configurado um ambiente de teste composto por uma aplicação servidor e uma aplicação cliente. . 
+O servidor de aplicação será baseado em Node.JS, utilizando a versão xx.xx.xx. 
+A aplicação cliente terá uma interface básica construída apenas com HTML5.
 
 % 4.3. Definição dos Cenários de Teste
 
